# zytron-precompiles

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  precompiles.go  precompiles_test.go
src/: anemoi.rs  ed_on_bn254.rs  error.rs  lib.rs  plonk.rs  utils.rs
test_json/: in.json  out.json
