[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
ethabi = "18.0"
primitive-types = "0.12"
lazy_static = "1.4"
bincode = "1.3"
sha3 = "0.10"
rayon = "1.7"
num-bigint = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
uzkge = { git = "https://github.com/zypher-game/uzkge.git" }
zmatchmaking = { git = "https://github.com/zypher-game/uzkge.git" }
zshuffle = { git = "https://github.com/zypher-game/uzkge.git" }

[dev-dependencies]
hex = "0.4.3"
rand_chacha = "0.3"

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16"  }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
