[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
ethabi = "18.0"
primitive-types = "0.12"
lazy_static = "1.4"
bincode = "1.3"
sha3 = "0.10"
rayon = "1.7"
num-bigint = "0.4"
ark-ff = { version = "0.4", package = "ark-ff-zypher" }
ark-ec = { version = "0.4", package = "ark-ec-zypher" }
ark-std = { version = "0.4", package = "ark-std-zypher" }
ark-serialize = { version = "0.4", package = "ark-serialize-zypher" }
ark-bn254 = { version = "0.4", package = "ark-bn254-zypher" }
ark-ed-on-bn254 = { version = "0.4", package = "ark-ed-on-bn254-zypher" }
uzkge = "0.1"
zmatchmaking = "0.1"
zshuffle = "0.1"

[dev-dependencies]
hex = "0.4.3"
rand_chacha = "0.3"
